grammar.js
    source_file: ($) => seq(repeat($._statement)),

    _statement: ($) => choice($.expression_statement, $._declaration_statement),

    expression_statement: ($) =>
      choice(seq($._expression, ";"), prec(1, $._expression_ending_with_block)),

    _option_type: ($) => seq($._type, optional("?")),

    struct_item: ($) =>
      seq(
        optional($.visibility_modifier),
        "struct",
        field("name", $._type_identifier),
        seq(field("body", $.field_declaration_list)),
      ),

    field_declaration_list: ($) =>
      seq(
        "{",
        sepBy(
          ",",
          seq(optional(repeat($.attribute_item)), $.field_declaration),
        ),
        optional(","),
        "}",
      ),

    field_declaration: ($) => choice($._struct_field_item, $._meta_field_item),

    _struct_field_item: ($) =>
      seq(
        optional($.visibility_modifier),
        field("name", $._field_identifier),
        ":",
        field("type", $._option_type),
        optional(seq("=", field("value", $._expression))),
      ),

    _meta_field_item: ($) =>
      seq(
        field("name", choice($.string_literal, $._field_identifier)),
        optional(seq(":", field("type", $._option_type))),
        "=",
        field("value", $._expression),
      ),

    function_item: ($) =>
      seq(
        optional($.visibility_modifier),
        "fn",
        field("name", choice($.identifier, $.metavariable)),
        field("type_parameters", optional($.type_parameters)),
        field("parameters", $.parameters),
        optional(
          choice(
            seq(":", field("return_type", $._option_type), optional("throws")),
            seq("throws"),
          ),
        ),
        field("body", $.block),
      ),

    meta_item: ($) => seq(choice("meta", "param"), $.field_declaration_list),

    i18n_item: ($) => seq($.i18n_key, $.field_declaration_list),

    let_declaration: ($) =>
      seq(
        "let",
        // optional($.mutable_specifier),
        field("pattern", $._pattern),
        optional(seq(":", field("type", $._option_type))),
        optional(seq("=", field("value", $._expression))),
        // optional(seq("else", field("alternative", $.block))),
        ";",
      ),

    parameters: ($) =>
      seq(
        "(",
        sepBy(
          ",",
          seq(
            optional($.attribute_item),
            choice(
              $.parameter,
              $.self_parameter,
              $.variadic_parameter,
              "_",
              // $._option_type,
            ),
          ),
        ),
        optional(","),
        ")",
      ),

    parameter: ($) =>
      seq(
        field("pattern", $._pattern),
        ":",
        choice(
          seq(
            field("type", $._option_type),
            field("default", optional(seq("=", $._expression))),
          ),
          seq("..", field("type", $._option_type)),
        ),
      ),

    _expression: ($) => choice($._expression_except_range, $.range_expression),

    _expression_except_range: ($) =>
      choice(
        $.unary_expression,
        // $.reference_expression,
        $.try_expression,
        $.binary_expression,
        $.assignment_expression,
        $.compound_assignment_expr,
        $.type_cast_expression,
        $.call_expression,
        $.return_expression,
        $.yield_expression,
        $._literal,
        prec.left($.identifier),
        alias(choice(...primitive_types), $.identifier),
        prec.left($._reserved_identifier),
        $.self,
        $.scoped_identifier,
        $.generic_function,
        $.await_expression,
        $.field_expression,
        $.array_expression,
        $.tuple_expression,
        $.unit_expression,
        $.break_expression,
        $.continue_expression,
        $.index_expression,
        $.metavariable,
        $.closure_expression,
        $.parenthesized_expression,
        $.struct_expression,
        $._expression_ending_with_block,
        $.unwrap_expression,
      ),

    _expression_ending_with_block: ($) =>
      choice(
        // $.unsafe_block,
        $.spawn_block,
        $.defer_block,
        $.do_catch_block,
        $.block,
        $.if_expression,
        $.switch_expression,
        $.while_expression,
        $.loop_expression,
        $.for_expression,
        $.const_block,
      ),

    binary_expression: ($) => {
      const table = [
        [PREC.and, "&&"],
        [PREC.or, "||"],
        [PREC.bitand, "&"],
        [PREC.bitor, "|"],
        [PREC.bitxor, "^"],
        [PREC.comparative, choice("==", "!=", "<", "<=", ">", ">=")],
        [PREC.shift, choice("<<", ">>")],
        [PREC.additive, choice("+", "-")],
        [PREC.multiplicative, choice("*", "/", "%")],
      ];

      // @ts-ignore
      return choice(
        ...table.map(([precedence, operator]) =>
          prec.left(
            precedence,
            seq(
              field("left", $._expression),
              // @ts-ignore
              field("operator", operator),
              field("right", $._expression),
            ),
          ),
        ),
      );
    },

    assignment_expression: ($) =>
      prec.left(
        PREC.assign,
        seq(field("left", $._expression), "=", field("right", $._expression)),
      ),

    return_expression: ($) =>
      choice(prec.left(seq("return", $._expression)), prec(-1, "return")),

    call_expression: ($) =>
      prec(
        PREC.call,
        seq(
          field("function", $._expression_except_range),
          field("arguments", $.arguments),
        ),
      ),

    arguments: ($) =>
      seq(
        "(",
        sepBy(
          ",",
          seq(
            repeat($.attribute_item),
            choice($._expression, $.keyword_argument),
          ),
        ),
        optional(","),
        ")",
      ),

    keyword_argument: ($) =>
      seq(field("key", $.identifier), ":", $._expression),

    array_expression: ($) =>
      seq(
        "[",
        repeat($.attribute_item),
        choice(
          seq($._expression, ";", field("length", $._expression)),
          seq(
            sepBy(",", seq(repeat($.attribute_item), $._expression)),
            optional(","),
          ),
        ),
        "]",
      ),

    tuple_expression: ($) =>
      seq(
        "(",
        repeat($.attribute_item),
        seq($._expression, ","),
        repeat(seq($._expression, ",")),
        optional($._expression),
        ")",
      ),

    struct_expression: ($) =>
      seq(
        field(
          "name",
          choice(
            $._type_identifier,
            alias(
              $.scoped_type_identifier_in_expression_position,
              $.scoped_type_identifier,
            ),
            $.generic_type_with_turbofish,
          ),
        ),
        field("body", $.field_initializer_list),
      ),

    field_initializer_list: ($) =>
      seq(
        "{",
        sepBy(
          ",",
          choice(
            $.shorthand_field_initializer,
            $.field_initializer,
            $.base_field_initializer,
          ),
        ),
        optional(","),
        "}",
      ),

    field_initializer: ($) =>
      seq(
        repeat($.attribute_item),
        field("name", $._field_identifier),
        ":",
        field("value", $._expression),
      ),

    field_expression: ($) =>
      prec(
        PREC.field,
        seq(
          field("value", $._expression),
          ".",
          field("field", choice($._field_identifier, $.integer_literal)),
        ),
      ),

    block: ($) =>
      seq(
        optional(seq($.label, ":")),
        "{",
        repeat($._statement),
        optional($._expression),
        "}",
      ),

    // Section - Patterns

    _pattern: ($) =>
      choice(
        $.let_declaration,
        $._literal_pattern,
        alias(choice(...primitive_types), $.identifier),
        $.identifier,
        $.scoped_identifier,
        $.tuple_pattern,
        // $.tuple_struct_pattern,
        $.struct_pattern,
        $._reserved_identifier,
        $.ref_pattern,
        $.slice_pattern,
        $.captured_pattern,
        $.reference_pattern,
        $.remaining_field_pattern,
        $.mut_pattern,
        $.range_pattern,
        $.or_pattern,
        $.const_block,
        "_",
      ),

    integer_literal: (_) =>
      token(
        seq(
          choice(/[0-9][0-9_]*/, /0x[0-9a-fA-F_]+/, /0b[01_]+/, /0o[0-7_]+/),
          optional(choice(...numeric_types)),
        ),
      ),

    string_literal: ($) =>
      choice(
        seq(
          '"',
          repeat(
            choice(
              alias($.unescaped_double_string_fragment, $.string_fragment),
              $.escape_sequence,
            ),
          ),
          '"',
        ),
      ),

    raw_string_literal: ($) => seq("r", $.string_literal),

    string_template: ($) =>
      seq(
        "`",
        repeat(
          choice(
            alias($.string_template_fragment, $.string_fragment),
            $.escape_sequence,
            $.string_template_substitution,
          ),
        ),
        "`",
      ),

    string_template_substitution: ($) => seq("${", $._expression, "}"),

    char_literal: (_) =>
      token(
        seq(
          optional("b"),
          "'",
          optional(
            choice(
              seq(
                "\\",
                choice(
                  /[^xu]/,
                  /u[0-9a-fA-F]{4}/,
                  /u\{[0-9a-fA-F]+\}/,
                  /x[0-9a-fA-F]{2}/,
                ),
              ),
              /[^\\']/,
            ),
          ),
          "'",
        ),
      ),

    bool_literal: (_) => choice("true", "false"),

    identifier: (_) => /(r#)?[_\p{XID_Start}][_\p{XID_Continue}]*/,

    _type_identifier: ($) => alias($.identifier, $.type_identifier),
    _field_identifier: ($) => alias($.identifier, $.field_identifier),

    color_literal: (_) => /#([a-zA-Z0-9]{6,8}|[a-z])/,

    nil_literal: (_) => "nil",
  },
});

/**
 * Creates a rule to match one or more of the rules separated by the separator.
 *
 * @param {RuleOrLiteral} sep - The separator to use.
 * @param {RuleOrLiteral} rule
 *
 * @return {SeqRule}
 *
 */
function sepBy1(sep, rule) {
  return seq(rule, repeat(seq(sep, rule)));
}

/**
 * Creates a rule to optionally match one or more of the rules separated by the separator.
 *
 * @param {RuleOrLiteral} sep - The separator to use.
 * @param {RuleOrLiteral} rule
 *
 * @return {ChoiceRule}
 *
 */
function sepBy(sep, rule) {
  return optional(sepBy1(sep, rule));
}
